################################################################################
##
## Copyright (c) 2014 Illumina, Inc.
##
## This file is part of Illumina's Enhanced Artificial Genome Engine (EAGLE),
## covered by the "BSD 2-Clause License" (see accompanying LICENSE file)
##
## file CMakeLists.txt
##
## Configuration file for the preInstall subdirectory
##
## author Roman Petrovski
##
################################################################################

add_subdirectory (checkTargetPathsWritable)
add_subdirectory (copyrightAndChanges)
