################################################################################
##
## Copyright (c) 2014 Illumina, Inc.
##
## This file is part of Illumina's Enhanced Artificial Genome Engine (EAGLE),
## covered by the "BSD 2-Clause License" (see accompanying LICENSE file)
##
## file CMakeLists.txt
##
## Configuration file for the COPYRIGHT and Changes file installation
##
## author Roman Petrovski
##
################################################################################

# Installing top level components
# install(FILES "${EAGLE_SOURCE_DIR}/Changes" "${EAGLE_SOURCE_DIR}/COPYRIGHT" DESTINATION "${EAGLE_DATADIR}")
